--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   url_launcher: ^6.1.14
   lottie: ^3.1.0
   supabase_flutter: ^2.6.0
+  file_picker: ^8.0.0+1
+  firebase_storage: ^12.1.0
 
 dev_dependencies:
   flutter_test:
